--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
+    "build:client": "cd ../frontend && npm run build",
+    "build": "npm run build:client && npm install",
     "client": "npm run dev --prefix ../frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
